add sheet router

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,9 @@ TEACHERS LOG-IN HERE
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>SignMeUp!</title>
   </head>
   <body>
-    <header>HOME | MY PROFILE | SIGNOUT</header>
     <div id="main"></div>
   </body>
 <script src="bundle.js"></script>
