add basic background and boxify css

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@ TEACHERS LOG-IN HERE
   <head>
     <meta charset="utf-8">
     <title>SignMeUp!</title>
+    <link rel="stylesheet" href="main.css" media="screen" title="no title">
   </head>
   <body>
     <div id="main"></div>
