--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,6 +15,8 @@ TEACHERS LOG-IN HERE
     <meta charset="utf-8">
     <title>SignMeUp!</title>
     <link rel="stylesheet" href="main.css" media="screen" title="no title">
+    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Gochi+Hand" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
